--- a/site/reference/admin-api.qmd
+++ b/site/reference/admin-api.qmd
@@ -1,6 +1,8 @@
 ---
-title: "Admin API reference"
+title: "{{< var vm.product >}} Admin API reference"
+subtitle: "Manage organizations, users, roles, templates, and system bootstrap."
 date: last-modified
+sidebar: false
 ---
 
 ::: {.column-screen}
@@ -28,19 +30,6 @@ date: last-modified
     use-path-in-nav-bar="true"
     allow-search="true"
     allow-advanced-search="true"
-    fill-request-fields-with-example="true"
-    api-key-name=""
-    api-key-location=""
-    api-key-value="$KEY">
+    fill-request-fields-with-example="true">
 </rapi-doc>
 :::
-
-<!---
-
-    schema-style="tree"
-    paths-expanded="false"
-
-div#api-info {
-    display: none;
-}
---->
