--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -1,6 +1,8 @@
 ---
-title: "VM API reference"
+title: "{{< var vm.product >}} API reference"
+subtitle: "Interact with models, templates, groups, business units, and other organizational resources."
 date: last-modified
+sidebar: false
 ---
 
 ::: {.column-screen}
@@ -23,24 +25,12 @@ date: last-modified
     show-header="false"
     info-description-headings-in-navbar="true"
     show-curl-before-try="true"
+    code-sample-style="curl"
     allow-server-selection="false"
     show-method-in-nav-bar="as-plain-text"
     use-path-in-nav-bar="true"
     allow-search="true"
     allow-advanced-search="true"
-    fill-request-fields-with-example="true"
-    api-key-name=""
-    api-key-location=""
-    api-key-value="$KEY">
+    fill-request-fields-with-example="true">
 </rapi-doc>
 :::
-
-<!---
-
-    schema-style="tree"
-    paths-expanded="false"
-
-div#api-info {
-    display: none;
-}
---->
