--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -13,7 +13,7 @@ listing:
       - manage-model-documents.qmd
 ---
 
-Set up document types for use on models across your organization. By default, {{< var vm.product >}} provides document types and out-of-the-box templates for model documentation, validation reports, and ongoing monitoring reports.
+Set up document types, categories of model-related content, for use on models across your organization. By default, {{< var vm.product >}} provides document types and out-of-the-box templates for model documentation, validation reports, and ongoing monitoring reports.
 
 :::{#model-documents}
 :::
