--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -9,7 +9,7 @@ aliases:
 
 Customize templates for document types to fit your specific case-by-case needs, such as type or complexity of model or model use case.
 
-  - Templates are versioned and saving a documentation template after making changes or reverting to a previous version state always creates a new version, or you can duplicate templates to create new independent templates in your library. 
+  - Templates are versioned and saving a template after making changes or reverting to a previous version state always creates a new version, or you can duplicate templates to create new independent templates in your library. 
   - Documentation templates are stored as YAML files edited directly using the advanced editor, allowing you full control over the minitua such as desired guidelines. 
   - We also provide a simplified editing experience to allow you to easily construct and rearrange the outline of your template.
 
@@ -169,7 +169,7 @@ a:hover {
 
 ## Troubleshooting
 
-The documentation template editor validates the YAML changes you make and flags any errors that it finds. If you make a change that the editor cannot parse correctly, the editor will not let you save the changes until you correct the YAML. 
+The documentat template editor validates the YAML changes you make and flags any errors that it finds. If you make a change that the editor cannot parse correctly, the editor will not let you save the changes until you correct the YAML. 
 
 Common issues with YAML include incorrect indenting, imbalanced quotes, or missing colons between keys and values. If you run into issues with incorrect YAML, check the error message provided by the template editor, as it might provide a line and column number where the error occurs.
 
