--- a/site/reference/admin-api.qmd
+++ b/site/reference/admin-api.qmd
@@ -1,33 +1,32 @@
 ---
-title: "{{< var vm.product >}} Admin API reference"
-subtitle: "Manage organizations, users, roles, templates, and system bootstrap."
-date: last-modified
+title-block-style: none
 sidebar: false
+css: reference.css
 ---
 
 ::: {.column-screen}
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 <rapi-doc 
     spec-url="https://api.dev.vm.validmind.ai/admin/api/v1/swagger.json"
+    show-header="false"
     theme="light"
     load-fonts="true"
-    regular-font="Inter" 
+    regular-font="Inter"
+    mono-font="'Consolas' monospace"
     font-size="largest"
-    primary-color="#de257e"
+    primary-color="#196972"
     bg-color="#ffffff"
     nav-bg-color="#ffffff" 
-    nav-text-color="#222425" 
+    nav-text-color="#585F60" 
     nav-hover-bg-color="#ffffff" 
-    nav-hover-text-color="#222425" 
-    nav-active-item-marker="colored-block"
+    nav-hover-text-color="#de257e"
     nav-accent-color="#de257e" 
-    nav-item-spacing="compact"
-    show-header="false"
-    info-description-headings-in-navbar="true"
-    show-curl-before-try="true"
-    allow-server-selection="false"
-    show-method-in-nav-bar="as-plain-text"
+    nav-accent-text-color="#de257e"
+    show-method-in-nav-bar="colored-block"
     use-path-in-nav-bar="true"
+    allow-authentication="false"
+    allow-server-selection="false"
+    allow-try="false"
     allow-search="true"
     allow-advanced-search="true"
     fill-request-fields-with-example="true">
