--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -1,7 +1,5 @@
 ---
-title: "{{< var vm.product >}} API reference"
-subtitle: "Interact with models, templates, groups, business units, and other organizational resources."
-date: last-modified
+title-block-style: none
 sidebar: false
 ---
 
@@ -13,10 +11,10 @@ sidebar: false
     load-fonts="true"
     regular-font="Inter" 
     font-size="largest"
-    primary-color="#de257e"
+    primary-color="#196972"
     bg-color="#ffffff"
     nav-bg-color="#ffffff" 
-    nav-text-color="#222425" 
+    nav-text-color="#585F60" 
     nav-hover-bg-color="#ffffff" 
     nav-hover-text-color="#222425" 
     nav-active-item-marker="colored-block"
