Add same save point tweaks to VM API

--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -7,26 +7,25 @@ sidebar: false
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 <rapi-doc 
     spec-url="https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json"
+    show-header="false"
     theme="light"
     load-fonts="true"
-    regular-font="Inter" 
+    regular-font="Inter"
+    mono-font="'Consolas' monospace"
     font-size="largest"
     primary-color="#196972"
     bg-color="#ffffff"
     nav-bg-color="#ffffff" 
     nav-text-color="#585F60" 
     nav-hover-bg-color="#ffffff" 
-    nav-hover-text-color="#222425" 
-    nav-active-item-marker="colored-block"
+    nav-hover-text-color="#de257e"
     nav-accent-color="#de257e" 
-    nav-item-spacing="compact"
-    show-header="false"
-    info-description-headings-in-navbar="true"
-    show-curl-before-try="true"
-    code-sample-style="curl"
-    allow-server-selection="false"
-    show-method-in-nav-bar="as-plain-text"
+    nav-accent-text-color="#de257e"
+    show-method-in-nav-bar="colored-block"
     use-path-in-nav-bar="true"
+    allow-authentication="false"
+    allow-server-selection="false"
+    allow-try="false"
     allow-search="true"
     allow-advanced-search="true"
     fill-request-fields-with-example="true">
