--- a/site/guide/model-inventory/_model-inventory-fields.qmd
+++ b/site/guide/model-inventory/_model-inventory-fields.qmd
@@ -1,1 +1,1 @@
-Create and edit the fields that appear on all models in your model inventory. Choose from an array of field types with different properties and use cases.
+Manage the fields that appear on all models in your model inventory. Choose from an array of field types with different properties and use cases.
