Move titles and descriptions into listing

--- a/site/reference/rest-api-reference.qmd
+++ b/site/reference/rest-api-reference.qmd
@@ -9,11 +9,15 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-      - vm-api.qmd
-      - admin-api.qmd
+      - title: "{{< var vm.product >}} API"
+        description: "Interact with models, templates, groups, business units, and other organizational resources."
+        path: vm-api.qmd
+      - title: "{{< var vm.product >}} Admin API"
+        description: "Manage organizations, users, roles, templates, and system bootstrap."
+        path: admin-api.qmd
 ---
 
-This page contains reference documentation for the ValidMind REST APIs. 
+This page contains reference documentation for the ValidMind REST APIs.
 
 ::: {.panel-tabset}
 
