--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -342,7 +342,7 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 
 1. From the **{{< fa cubes >}} Inventory** in the ValidMind Platform, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Validation Report**.
+2. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 
 3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.
 
@@ -383,7 +383,7 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Validation Report**.
+2. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 3. Locate the Data Preparation section and click on **2.2.2. Model Performance** to expand that section.
 4. Under the Model Performance Metrics section, locate Findings then click **Link Finding to Report**.
 5. Click **{{< fa plus >}} Create New Finding** to add a finding.
