--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -308,7 +308,7 @@ While the example below focuses on a specific test result, you can follow the sa
 ### 1. Link data quality test results
 a. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-b. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Validation Report**.
+b. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 
 c. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
 
@@ -343,7 +343,7 @@ f. Click **Update Linked Evidence** to add the test results to the validation re
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Validation Report**.
+2. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 3. Locate the Data Preparation section and click on **2.2.1. Data Quality** to expand that section.
 4. Under the Class Imbalance Assessment section, locate Validator Evidence then click **Link Evidence to Report**.
 5. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance**
