--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -235,7 +235,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Once you've called `preview_template()`:
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. On the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Validation Report**.
+2. On the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.
 3. Note how the structure of the validation report reflects the previewed template.
 
 When you're done exploring, click [{{< fa chevron-right >}}]() to continue.
@@ -256,7 +256,7 @@ Typically, a champion model is submitted to you for validation with completed mo
 Here, review the empty sample model documentation for the model you registered earlier to familiarize you with what the structure of documentation could look like when presented to you for review:
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
+2. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 
 ::: {.embed}
 The structure of the model documentation reflects the documentation template applied to the model, just like the validation report template.
