--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -289,7 +289,7 @@ With the test results logged, let's head to the model we connected to at the beg
 
 1. From the **{{< fa cubes >}} Inventory** in the {{< var validmind.platform >}}, go to the model you connected to earlier.
 
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
+2. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 
@@ -316,7 +316,7 @@ With the test results logged, let's head to the model we connected to at the beg
 :::
 
 1. Select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
+2. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 3. Locate the Data Preparation section and click on **2.3 Correlations and Interactions** to expand that section.
 4. Hover under the Pearson Correlation Matrix content block until a horizontal line with a **{{< fa plus >}}** button appears, indicating that you can insert a new block.
 5. Click **{{< fa plus >}}** and then select **Test-Driven Block** under [from library]{.smallcaps}:
