--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -87,7 +87,7 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 2. Locate or search for the model you registered for this quickstart and click on it to select it.[^2]
 
-3. In the left sidebar that appears for the model, click **{{< fa file >}} Documents** and select **Documentation**:
+3. In the left sidebar that appears for the model, click **Documentation** under {{< fa file >}} Documents:
 
    - Your model's documentation is broken down into sections, defined by your documentation templates.[^3]
    - Each section can be assigned a completion status,[^4] allowing you to track the progress of your documentation.
