--- a/site/guide/model-documentation/work-with-test-results.qmd
+++ b/site/guide/model-documentation/work-with-test-results.qmd
@@ -29,7 +29,7 @@ Once generated via the {{< var validmind.developer >}}, view and add the test re
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^5]
+3. In the left sidebar that appears for your model, under {{< fa file >}} Documents select **Documentation**, **Validation Report**, or **Ongoing Monitoring**.[^5]
 
 4. Click on a section header to expand that section and add content.
 
@@ -77,7 +77,7 @@ Once added to your model documentation, validation reports, and ongoing monitori
 
 2. Select a model by clicking on it or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation, Validation Report, or Ongoing Monitoring type file.[^11]
+3. In the left sidebar that appears for your model, under {{< fa file >}} Documents and select **Documentation**, **Validation Report**, or **Ongoing Monitoring**.[^11]
 
 {{< include /guide/model-documentation/_view-test-result-metadata.qmd >}}
 
