Rework ValidMind access section

--- a/site/guide/configuration/log-in-to-validmind.qmd
+++ b/site/guide/configuration/log-in-to-validmind.qmd
@@ -53,16 +53,45 @@ Log in to our cloud-hosted {{< var validmind.platform >}} to work with your mode
 
     After successful login, you will be redirected to the main dashboard of the {{< var validmind.platform >}}.
 
-## Basic ValidMind access
+## {{< var vm.product >}} access
 
-If you are a new user signing in for the first time, you might have only _a basic ValidMind user role_. This role allows you to authenticate but provides limited access to your organization, models, and platform features.
+When you sign in to {{< var vm.product >}} for the first time, what you can access depends on whether user self-onboarding is enabled for your environment.
 
-If you are unable to access platform features after logging in, ask an administrator to:
+### If user self-onboarding is enabled
 
-- Assign you to one or more groups[^1]
-- Grant you the appropriate roles[^2]
+One of the following two options will apply:
 
-After groups and roles have been assigned, you will gain access to available models and workflows. You will also be able to perform actions based on your permissions, such as working on model documentation, running tests, or completing validations.
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns .pr5}
+#### Were you invited to an organization?
+
+- Your invitation is accepted automatically. 
+- You are logged in to the organization with the roles defined in the invitation.
+:::
+
+::: {.w-50-ns}
+#### Were you not invited and do not belong to an organization?
+
+- You can create a new organization.
+- You will automatically be assigned the following roles for that organization:
+
+::: {.pl4}
+[{{< fa hand >}} Customer Admin]{.bubble}[{{< fa code >}} Developer]{.bubble}
+:::
+
+:::
+
+::::
+
+### If user self-onboarding is disabled
+
+- You might have only the [{{< fa wrench >}} Basic User]{.bubble} role with very limited access.
+- You will see a message prompting you to contact an administrator. 
+- An administrator must invite you to an organization[^2] and grant appropriate roles.[^3] 
+
+Once you belong to an organization and have the necessary roles, you can access models and workflows and perform actions such as editing documentation, running tests, or completing validations.
+
 
 ## {{< var validmind.vpv >}}
 
@@ -74,12 +103,12 @@ To configure and log in through a private link for your company VPC using a supp
 
 ## What's next
 
-- [Managing your organization](managing-your-organization.qmd)
-- [Managing users](managing-users.qmd)
 - [Personalize {{< var vm.product >}}](personalize-validmind.qmd)
 
 <!-- FOOTNOTES -->
 
-[^1]: [Manage groups](/guide/configuration/manage-groups.qmd)
-[^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
-
+<!-- NR
+[^1] is defined in _validmind-public-internet.qmd, FYI. 
+-->
+[^2]: [Manage users](/guide/configuration/manage-users.qmd)
+[^3]: [Manage roles](/guide/configuration/manage-roles.qmd)
