Rework basic user role info one more time

--- a/site/guide/configuration/log-in-to-validmind.qmd
+++ b/site/guide/configuration/log-in-to-validmind.qmd
@@ -88,10 +88,9 @@ One of the following two options will apply:
 
 - You might have only the [{{< fa wrench >}} Basic User]{.bubble} role with very limited access.
 - You will see a message prompting you to contact an administrator. 
-- An administrator must invite you to an organization[^2] and grant appropriate roles.[^3] 
+- An administrator must assign you to one or more groups[^2] and grant you the appropriate roles.[^3]
 
-Once you belong to an organization and have the necessary roles, you can access models and workflows and perform actions such as editing documentation, running tests, or completing validations.
-
+Once you have the necessary access, you can work with models and workflows and perform actions such as editing documentation, running tests, or completing validations.
 
 ## {{< var validmind.vpv >}}
 
