--- a/site/guide/monitoring/work-with-metrics-over-time.qmd
+++ b/site/guide/monitoring/work-with-metrics-over-time.qmd
@@ -37,7 +37,7 @@ Learn how to log metrics over time, set thresholds, and analyze model performanc
 
 2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^5]
+3. In the left sidebar that appears for your model, click **Documentation** or **Ongoing Monitoring** under {{< fa file >}} Documents.[^5]
 
 4. Click on a section header to expand that section and add content.
 
@@ -78,7 +78,7 @@ After you have added metrics over time to your document, you can view the follow
 
 2. Select a model or find your model by applying a filter or searching for it.[^7]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Model Documentation or Ongoing Monitoring type file.[^8]
+3. In the left sidebar that appears for your model, click **Documentation** or **Ongoing Monitoring** under {{< fa file >}} Documents.[^8]
 
 4. Locate the metric whose metadata you want to view.
 
