--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -5,6 +5,10 @@ date: last-modified
 
 Add or delete documents available on individual models in your inventory.
 
+::: {.callout title="A standard model documentation, validation report, and ongoing monitoring report documents are provided by default."} 
+These stock documents cannot be deleted, only edited.
+:::
+
 ::: {.attn}
 
 ## Prerequisites
