--- a/site/guide/model-validation/preparing-validation-reports.qmd
+++ b/site/guide/model-validation/preparing-validation-reports.qmd
@@ -76,7 +76,7 @@ Use the {{< var validmind.platform >}} to prepare detailed validation reports in
 
 2. Select a model or find your model by applying a filter or searching for it.[^5]
 
-3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^6]
+3.  In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report under Documents.[^6]
 
     Jump to any section of the validation report by expanding the table of contents on the left and selecting the relevant section you would like to view.
 
