--- a/site/guide/model-validation/_link-developer-evidence.qmd
+++ b/site/guide/model-validation/_link-developer-evidence.qmd
@@ -5,7 +5,7 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+1. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
    Expand any subsection of the validation report you would like to work with.
 
@@ -32,7 +32,7 @@ To link evidence logged by developers to your validation report:
 
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a [Validation Report type file](/guide/templates/working-with-model-documents.qmd){target="blank"}.
+1. In the left sidebar that appears for your model, click **Validation Report** under [{{< fa file >}} Documents](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
    Expand any subsection of the validation report you would like to work with.
 
