--- a/site/guide/model-validation/_add-model-findings.qmd
+++ b/site/guide/model-validation/_add-model-findings.qmd
@@ -14,7 +14,7 @@
 
 1. Select a model or [find your model by applying a filter or searching for it](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models){target="_blank"}.
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** > **Documentation**.
+1. In the left sidebar that appears for your model, click **Documentation** under {{< fa file >}} Documents.
 
     Either log a finding on this overview page, or via a specific documentation section. Both methods will allow you to associate a finding with a documentation section. 
 
