--- a/site/guide/model-documentation/content_blocks/_test-driven-block.qmd
+++ b/site/guide/model-documentation/content_blocks/_test-driven-block.qmd
@@ -1,2 +1,2 @@
 test-driven block [from library]{.smallercaps .pink}
-: Can be within model documentation and ongoing monitoring plans to display one of the supported test results collected by the {{< var validmind.developer >}}.
+: Can be added within default model documentation and default ongoing monitoring plans to display one of the supported test results collected by the {{< var validmind.developer >}}.
