--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -26,11 +26,35 @@ Compliance assessments provide an unbiased starting point that enables more effi
 
 ## Link evidence to reports
 
-### Link developer evidence
+### Link developer evidence*
 
-{{< include _link-developer-evidence.qmd >}}
+To link evidence logged by developers^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)] to your validation report:
 
-### Link validator evidence
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
+
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+
+   Expand any subsection of the validation report you would like to work with.
+
+   For example, locate 2. Validation then select **2.1.1. Assumptions**.
+
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
+
+   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence](/guide/model-validation/link-developer-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence" .screenshot}
+
+1. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
+   
+   - Available evidence is associated with the relevant documentation section. 
+   - If you are not sure if something is relevant, you can expand the section by clicking **{{< fa chevron-down >}}** for more details.
+
+1. Click **Update Linked Evidence**.
+
+   - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate and is connected to the correct documentation section.
+   - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
+
+### Link validator evidence**
 
 ::: {.callout}
 To link validator evidence to a report, you must first log tests as a validator with the {{< var validmind.developer >}}.[^4]
@@ -59,9 +83,27 @@ To link validator evidence to a report, you must first log tests as a validator 
    - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate.
    - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
 
-## Link findings to reports
+## Link findings to reports*
 
-{{< include _link-findings-to-reports.qmd >}}
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+
+1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
+
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+
+   Expand any subsection of the validation report you would like to work with.
+
+   For example, locate 2. Validation then select **2.1.1. Assumptions**.
+
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**. 
+
+   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](/guide/model-validation/link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
+
+1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.^[[Add findings on validation reports](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)] 
+
+1. Click **Update Linked Findings**.
+
+   Confirm that newly linked finding shown under Findings is accurate.
 
 ## Provide compliance assessments
 
