--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -26,45 +26,45 @@ Compliance assessments provide an unbiased starting point that enables more effi
 
 ## Link evidence to reports
 
-### Link developer evidence*
+### Link developer evidence
 
 To link evidence logged by developers^[[{{< var validmind.developer >}}](/developer/validmind-library.qmd)] to your validation report:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
+2. Select a model or find your model by applying a filter or searching for it.[^4]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^5]
 
    Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
+4. In any section of the report where the button is available, click **{{< fa link >}} Link Developer Evidence**. 
 
-   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence](/guide/model-validation/link-developer-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence" .screenshot}
+   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence](link-developer-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to developer evidence" .screenshot}
 
-1. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
+5. On the **Link Developer Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
    
    - Available evidence is associated with the relevant documentation section. 
    - If you are not sure if something is relevant, you can expand the section by clicking **{{< fa chevron-down >}}** for more details.
 
-1. Click **Update Linked Evidence**.
+6. Click **Update Linked Evidence**.
 
    - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate and is connected to the correct documentation section.
    - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
 
-### Link validator evidence**
+### Link validator evidence
 
 ::: {.callout}
-To link validator evidence to a report, you must first log tests as a validator with the {{< var validmind.developer >}}.[^4]
+To link validator evidence to a report, you must first log tests as a validator with the {{< var validmind.developer >}}.[^6]
 :::
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^5]
+2. Select a model or find your model by applying a filter or searching for it.[^7]
 
-3. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.[^6]
+3. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.[^8]
 
    You can now expand any subsection of the validation report you would like to work with.
 
@@ -83,25 +83,25 @@ To link validator evidence to a report, you must first log tests as a validator 
    - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate.
    - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
 
-## Link findings to reports*
+## Link findings to reports
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-1. Select a model or find your model by applying a filter or searching for it.^[[Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)]
+2. Select a model or find your model by applying a filter or searching for it.[^9]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.[^10]
 
    Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**. 
+4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**. 
 
-   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](/guide/model-validation/link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
+   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
 
-1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.^[[Add findings on validation reports](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)] 
+5. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.[^11]
 
-1. Click **Update Linked Findings**.
+6. Click **Update Linked Findings**.
 
    Confirm that newly linked finding shown under Findings is accurate.
 
@@ -125,8 +125,18 @@ To link validator evidence to a report, you must first log tests as a validator 
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
+[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^5]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^6]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^6]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
+
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^10]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
+[^11]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)
