--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -85,25 +85,7 @@ To link validator evidence to a report, you must first log tests as a validator 
 
 ## Link findings to reports
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^9]
-
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.[^10]
-
-   Expand any subsection of the validation report you would like to work with.
-
-   For example, locate 2. Validation then select **2.1.1. Assumptions**.
-
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**. 
-
-   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
-
-5. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.[^11]
-
-6. Click **Update Linked Findings**.
-
-   Confirm that newly linked finding shown under Findings is accurate.
+{{< include _link-findings-to-reports.qmd >}}
 
 ## Provide compliance assessments
 
@@ -134,9 +116,3 @@ To link validator evidence to a report, you must first log tests as a validator 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^10]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^11]: [Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)
