--- a/site/guide/model-validation/assess-compliance.qmd
+++ b/site/guide/model-validation/assess-compliance.qmd
@@ -56,32 +56,7 @@ To link evidence logged by developers^[[{{< var validmind.developer >}}](/develo
 
 ### Link validator evidence
 
-::: {.callout}
-To link validator evidence to a report, you must first log tests as a validator with the {{< var validmind.developer >}}.[^6]
-:::
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^7]
-
-3. In the left sidebar that appears for your model, click **Validation Report** under {{< fa file >}} Documents.[^8]
-
-   You can now expand any subsection of the validation report you would like to work with.
-
-   For example, locate 2. Validation then select **2.1.1. Assumptions**.
-
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Evidence to Report**. 
-
-   ![Validation report section 2.1.1. that shows a compliance assessment with the option to link evidence](/guide/model-validation/link-validator-evidence.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link evidence" .screenshot}
-
-5. On the **Link Validator Evidence to Validation Report** page that opens, select the evidence that is related to your assessment. 
-   
-   If you are not sure if something is relevant, you can expand the section by clicking **{{< fa chevron-down >}}** for more details.
-
-6. Click **Update Linked Evidence**.
-
-   - Confirm that the newly linked-to evidence shown under Developer Evidence is accurate.
-   - Evidence that needs your attention gets flagged with [{{< fa triangle-exclamation >}} Requires Attention]{.bubble .yellow-bg}. These sections get flagged automatically whenever a test result is above or below a certain threshold.
+{{< include _link-validator-evidence.qmd >}}
 
 ## Link findings to reports
 
@@ -110,9 +85,3 @@ To link validator evidence to a report, you must first log tests as a validator 
 [^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
 [^5]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^6]: [{{< var validmind.developer >}}](/developer/validmind-library.qmd)
-
-[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
